update environments para produccion

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,10 @@
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
+DB_PASSWORD=MySecretPassword
+DB_NAME=GestorSubs  
+DB_HOST=postgres
+DB_PORT=39722
+DB_USERNAME=postgres
+PORT=3000
 
-JWT_SECRET=
-ADMIN_PASSWORD=
-CRYPTO_KEY=
+JWT_SECRET=123456
+ADMIN_PASSWORD=SecretPassword
+CRYPTO_KEY=123456
